--- a/package.json
+++ b/package.json
@@ -1,54 +1,61 @@
 {
-  "name": "furinla-dashboard",
+  "name": "furinla-panel",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "server": "ts-node --skip-project server.ts",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "node server.js"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
-    "@supabase/supabase-js": "^2.39.0",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@supabase/supabase-js": "^2.39.3",
+    "@types/node": "^20.11.19",
+    "@types/react": "^18.2.57",
+    "@types/react-dom": "^18.2.19",
+    "@types/ssh2": "^1.11.19",
+    "autoprefixer": "^10.4.17",
+    "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "framer-motion": "^10.16.5",
-    "lucide-react": "^0.294.0",
-    "next": "14.0.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "socket.io": "^4.7.2",
-    "socket.io-client": "^4.7.2",
-    "ssh2": "^1.14.0",
-    "tailwind-merge": "^2.1.0",
+    "clsx": "^2.1.0",
+    "crypto-js": "^4.2.0",
+    "date-fns": "^3.3.1",
+    "framer-motion": "^11.0.5",
+    "lucide-react": "^0.330.0",
+    "next": "14.1.0",
+    "next-themes": "^0.2.1",
+    "postcss": "^8.4.35",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.1",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4",
+    "ssh2": "^1.15.0",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.3.3",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0",
-    "zustand": "^4.4.7"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/ssh2": "^1.11.16",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5"
+    "xterm-addon-web-links": "^0.9.0",
+    "zod": "^3.22.4"
   }
 }
