--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "furinla-vps-dashboard",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -8,7 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "server": "node dist/server/socket.js"
+    "server": "node --loader ts-node/esm server/index.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
@@ -91,6 +91,7 @@
     "eslint-config-next": "14.1.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
